cmake_minimum_required (VERSION 3.10)

add_executable( ${APPLICATION_NAME} LeMonADEViewerMain.cpp Camera.cpp LineParser.cpp )
target_link_libraries( ${APPLICATION_NAME} ${OPENGL_LIBRARIES} ${FLTK_LIBRARIES} LeMonADE )
target_compile_options(${APPLICATION_NAME} PRIVATE -Wno-error=narrowing)
SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}" OUTPUT_NAME ${APPLICATION_NAME} CLEAN_DIRECT_OUTPUT 1 )
